[package]
name = "chat_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
lazy_static = "1.4.0"
clap = { version = "3.2.8", features = ["derive"] }
