[package]
name = "chat_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
roxmltree = "0.14.1"
rayon = "1.5.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
lazy_static = "1.4.0"
hhmmss = "0.1.0"
colored = "2.0.0"
chrono = "0.4.19"
regex = "1"
sha1 = "0.10.1"
clap = { version = "3.2.8", features = ["derive"] }
